Adding styles to the page

--- a/Tribute page/index.html
+++ b/Tribute page/index.html
@@ -7,11 +7,15 @@
 <body>
     <div id="main">
         <header>
-            <h1 id="title">Insert name here</h1>
+            <h1 id="title">
+                 <span class="left">H</span><span class="left">a</span><span class="left">y</span><span class="left">l</span><span class="left">e</span><span class="left">y</span> 
+                <span class="right">W</span><span class="right">i</span><span class="right">l</span><span class="right">l</span><span class="right">i</span><span class="right">a</span><span class="right">m</span><span class="right">s</span> 
+                <!-- Hayl<span>e</span>y Williams -->
+            </h1>
         </header>
         <div id="img-div">
             <figure>
-                <img src="https://78.media.tumblr.com/daa31ae30e6e0f638ca93d546ad9db3a/tumblr_pbv7msAx3a1qft1vjo1_500.png" alt="Picture of Hayley Williams on stage" id="image">
+                <img src="./Hayley.png" alt="Picture of Hayley Williams on stage" id="image">
                 <figcaption id="img-caption">Random description</figcaption> <!-- Image description-->
             </figure>
         </div>
