--- a/Tribute page/index.html
+++ b/Tribute page/index.html
@@ -10,21 +10,22 @@
             <h1 id="title">
                  <span class="left">H</span><span class="left">a</span><span class="left">y</span><span class="left">l</span><span class="left">e</span><span class="left">y</span> 
                 <span class="right">W</span><span class="right">i</span><span class="right">l</span><span class="right">l</span><span class="right">i</span><span class="right">a</span><span class="right">m</span><span class="right">s</span> 
-                <!-- Hayl<span>e</span>y Williams -->
             </h1>
         </header>
         <div id="img-div">
             <figure>
-                <img src="./Hayley.png" alt="Picture of Hayley Williams on stage" id="image">
-                <figcaption id="img-caption">Random description</figcaption> <!-- Image description-->
+                <img src="./assets/Hayley.png" alt="Picture of Hayley Williams on stage" id="image">
+                <figcaption id="img-caption">Hayley Williams on stage</figcaption> <!-- Image description-->
             </figure>
         </div>
         <section>
             <article id="tribute-info">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis, esse quae nostrum odit ab soluta error ducimus perspiciatis. Consequuntur neque eius repudiandae accusamus saepe id impedit illo corporis perspiciatis cupiditate.</p>
+                <p>Hayley Williams is the lead singer of an American band called <span id="band-title">Paramore</span>.</p>
             </article>
-            <p>You can read more about this amazing artist by going to her <a href="https://en.wikipedia.org/wiki/Hayley_Williams" target="_blank" id="tribute-link">Wikipedia</a> page!</p>
         </section>
+        <footer>
+            <p>You can read more about this amazing artist by going to her <a href="https://en.wikipedia.org/wiki/Hayley_Williams" target="_blank" id="tribute-link">Wikipedia</a> page!</p>
+        </footer>
     </div>
 </body>
 </html>
