FInal adjustments to styles

--- a/Tribute page/index.html
+++ b/Tribute page/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Hayley Williams Tribute Page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,9 +20,34 @@
         </div>
         <section>
             <article id="tribute-info">
-                <p>Hayley Williams is the lead singer of an American band called <span id="band-title">Paramore</span>.</p>
+                <p>Hayley Williams is the lead singer and songwriter of an American band called <span id="band-title">Paramore</span>. <br>
+                    Williams has been a professional singer since 2003, when she was 14 years old.
+                    Alongside her bandmates, she released four studio albums and two live albums, they also featured in movie soundtracks.
+                    Besides her successful carreer as a singer, Hayley also has a hair dye company called <span id="company">Good Dye Young</span>. 
+                </p>
             </article>
         </section>
+        <section class="list-1">
+            <h3 class="albums">Albums</h3>
+            <ul class="albums-list">
+                <li>All We Know Is Falling (2005)</li>
+                <li>Riot! (2007)</li>
+                <li>Brand New Eyes (2009)</li>
+                <li>Paramore(2013)</li>
+                <li>After Laughter (2017)</li>
+            </ul>
+        </section>
+        <section class="list-2">
+            <h3 class="awards">Awards</h3>  
+            <ul class="awards-list">
+                <li>Best Rock Song - Grammy Awards (2015) </li>
+                <li>Best Vocalist - Alternative Press Music Awards (2015)</li>
+                <li>Trailblazer Award - Billboard Women in Music (2014) </li>
+                <li>Hook Up Song - Teen Choice Award (2010)</li>
+                <li>Best International Act - Video Music Brasil (2008)</li>
+            </ul>
+        </section>
+
         <footer>
             <p>You can read more about this amazing artist by going to her <a href="https://en.wikipedia.org/wiki/Hayley_Williams" target="_blank" id="tribute-link">Wikipedia</a> page!</p>
         </footer>
