--- a/Tribute page/index.html
+++ b/Tribute page/index.html
@@ -27,27 +27,28 @@
                 </p>
             </article>
         </section>
-        <section class="list-1">
-            <h3 class="albums">Albums</h3>
-            <ul class="albums-list">
-                <li>All We Know Is Falling (2005)</li>
-                <li>Riot! (2007)</li>
-                <li>Brand New Eyes (2009)</li>
-                <li>Paramore(2013)</li>
-                <li>After Laughter (2017)</li>
-            </ul>
+        <section id="lists">
+            <aside class="list-1">
+                <h3 class="albums">Albums</h3>
+                <ul class="albums-list">
+                    <li>All We Know Is Falling (2005)</li>
+                    <li>Riot! (2007)</li>
+                    <li>Brand New Eyes (2009)</li>
+                    <li>Paramore(2013)</li>
+                    <li>After Laughter (2017)</li>
+                </ul>
+            </aside>
+            <aside class="list-2">
+                <h3 class="awards">Awards</h3>  
+                <ul class="awards-list">
+                    <li>Best Rock Song - Grammy Awards (2015) </li>
+                    <li>Best Vocalist - Alternative Press Music Awards (2015)</li>
+                    <li>Trailblazer Award - Billboard Women in Music (2014) </li>
+                    <li>Hook Up Song - Teen Choice Award (2010)</li>
+                    <li>Best International Act - Video Music Brasil (2008)</li>
+                </ul>
+            </aside>
         </section>
-        <section class="list-2">
-            <h3 class="awards">Awards</h3>  
-            <ul class="awards-list">
-                <li>Best Rock Song - Grammy Awards (2015) </li>
-                <li>Best Vocalist - Alternative Press Music Awards (2015)</li>
-                <li>Trailblazer Award - Billboard Women in Music (2014) </li>
-                <li>Hook Up Song - Teen Choice Award (2010)</li>
-                <li>Best International Act - Video Music Brasil (2008)</li>
-            </ul>
-        </section>
-
         <footer>
             <p>You can read more about this amazing artist by going to her <a href="https://en.wikipedia.org/wiki/Hayley_Williams" target="_blank" id="tribute-link">Wikipedia</a> page!</p>
         </footer>
