--- a/Tribute page/index.html
+++ b/Tribute page/index.html
@@ -14,7 +14,7 @@
         </header>
         <div id="img-div">
             <figure>
-                <img src="./assets/Hayley.png" alt="Picture of Hayley Williams on stage" id="image">
+                <img src="./assets/Hayley.jpg" alt="Picture of Hayley Williams on stage" id="image">
                 <figcaption id="img-caption">Hayley Williams on stage</figcaption> <!-- Image description-->
             </figure>
         </div>
