--- a/Form survey/index.html
+++ b/Form survey/index.html
@@ -24,9 +24,8 @@
                         <option value="rages">Incontáveis rages com Overwatch</option>
                         <option value="rene">Renê afirmando que irá ao psicólogo</option>
                         <option value="overwatch">Todos dizendo que irão jogar o competitivo do Overwatch</option>
-                        <option value="william">William talaricando o namorado da menina da outra cidade</option>
-                        <option value="xusquito">Xusquito jogando jogos online</option>
-                        <option value="linux">Xusquito instalando linux</option>
+                        <option value="xusquito">Xusquiqui jogando jogos online</option>
+                        <option value="linux">Xusquiqui instalando linux</option>
                     </select>
             </div>
             <label for="pergunta" id="pergunta">Você frequentaria o chat do NGP no telegram?</label>
@@ -46,13 +45,10 @@
                 </label>
                 <ul class="checkbox">
                     <li>
-                        <input type="checkbox" name="willas" value="1">WILLIAM
-                    </li>
-                    <li>
                         <input type="checkbox" name="rene" value="2">Renê
                     </li>
                     <li>
-                        <input type="checkbox" name="xusquito" value="3">Xusquito
+                        <input type="checkbox" name="xusquiqui" value="3">Xusquiqui
                     </li>
                     <li>
                         <input type="checkbox" name="feitos" value="4">Feitos
@@ -67,7 +63,7 @@
             </div>
             <div class="text-area">
                 <h3>Considerações finais:</h3>
-                <textarea name="comentario" id="comentario" placeholder="Envie seu xingamento"></textarea>
+                <textarea name="comentario" id="comentario" placeholder="Envie seu comentário"></textarea>
             </div>
             <button id="submit" type="submit">Enviar</button>
         </form>
