Applied changes to the footer.

--- a/Namefy/index.html
+++ b/Namefy/index.html
@@ -22,7 +22,7 @@
             <button class="btn" onclick="generateName()">Generate Name</button>
         </section>
         <footer class="footer">    
-            <p>Made by Eloisa Morais</p>
+            <p>Made by <a href="http://github.com/eloisasmorais">Eloisa Morais</a></p>
         </footer>
     </div>
 
