Changed header details

--- a/Namefy/index.html
+++ b/Namefy/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1 class="title">Namefy</h1>
+            <h1 class="title"><a href="index.html">Namefy</a></h1>
             <h4>Randomly name your Spotify playlist!</h4>
         </header>
         <section class="functionality">
