--- a/Namefy/index.html
+++ b/Namefy/index.html
@@ -17,7 +17,7 @@
             <label for="user-input" class="label">Does your playlist have a theme? Put it down here:</label>
             <input type="text" id="user-input" onchange="getUserInput(event)"" placeholder="Start typing...">
             <div id="playlist-name">
-                <h3>The name of you playlist will show up here!</h3>
+                <p>The name of you playlist will show up here!</p>
             </div>
             <button class="btn" onclick="generateName()">Generate Name</button>
         </section>
