--- a/Namefy/index.html
+++ b/Namefy/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <header class="header">
             <h1 class="title"><a href="index.html">Namefy</a></h1>
-            <h4>Randomly name your Spotify playlist!</h4>
+            <h4 class="subtitle">Randomly name your Spotify playlist!</h4>
         </header>
         <section class="functionality">
             <label for="user-input" class="label">Does your playlist have a theme? Put it down here:</label>
