changed input background color and fixed extra white space under the footer

--- a/Namefy/index.html
+++ b/Namefy/index.html
@@ -15,7 +15,7 @@
         </header>
         <section class="functionality">
             <label for="user-input" class="label">Does your playlist have a theme? Put it down here:</label>
-            <input type="text" id="user-input" onchange="getUserInput(event)"" placeholder="Start typing...">
+            <input type="text" id="user-input" onchange="getUserInput(event)" placeholder="Start typing...">
             <div id="playlist-name">
                 <p>The name of you playlist will show up here!</p>
             </div>
