Adiciona sessão sobre mim

--- a/projeto-dwe/index.html
+++ b/projeto-dwe/index.html
@@ -30,18 +30,32 @@
         </div>
     </header>
     <main class="main-wrapper">
-        <a class="card-container" href="./pages/page-1.html">
+        <a class="card-container" href="./pages/servidor-apache.html">
             <h3>Servidor Apache</h3>
             <div id="pic1-container">
                 <img src="./img/logo.png" alt="img" class="img" />
             </div>
         </a>
-        <a class="card-container" href="./pages/page-4.html">
+        <a class="card-container" href="./pages/seguranca-hidrica.html">
             <h3>Segurança Hídrica</h3>
             <div id="pic2-container">
                 <img src="./img/gota2.png" alt="img" class="img-2"/>
             </div>
         </a> 
+        <section class="about">
+                <h1>Sobre mim</h1>
+                <h2></h2>
+                <p>
+                    Eloisa Silva de Morais, estudante do primeiro período de Análise e Desenvolvimento de Sistemas pelo Instituto Federal de São Paulo, ama gatos e video games
+                    apesar de não ter mais tempo pra isso pois prefere programar.
+                </p>
+                <h2>Tecnologias preferidas</h2>
+                <ul>
+                    <li>Javascript</li>
+                    <li>C++</li>
+                    <li>React</li>
+                </ul>
+            </section>
     </main>
     <footer class="footer">
         <p>&#x1F308; Desenvolvido por Eloisa Morais </p>
