Muda texto sobre mim

--- a/projeto-dwe/index.html
+++ b/projeto-dwe/index.html
@@ -48,14 +48,15 @@
                 <h1>Sobre mim</h1>
                 <h2></h2>
                 <p>
-                    Eloisa Silva de Morais, estudante do primeiro período de Análise e Desenvolvimento de Sistemas pelo Instituto Federal de São Paulo, ama gatos e video games
-                    apesar de não ter mais tempo pra isso pois prefere programar.
+                    Me chamo Eloísa, sou estudante do primeiro período de Análise e Desenvolvimento de Sistemas pelo Instituto Federal de São Paulo, amo gatos e video games
+                    apesar de não ter mais tempo pra isso pois prefiro programar.
                 </p>
                 <h2>Tecnologias preferidas</h2>
                 <ul>
                     <li>Javascript</li>
                     <li>C++</li>
                     <li>React</li>
+                    <li>Linux</li>
                 </ul>
             </section>
     </main>
