Corrige erros gramaticais

--- a/projeto-dwe/pages/informacoes.html
+++ b/projeto-dwe/pages/informacoes.html
@@ -65,7 +65,7 @@
             <h2>Open Source</h2>
             <p>
                 O Servidor Apache se aproveita de uma das características mais importantes dos tempos atuais, o código aberto
-                cada vez mais aclamado até por grandes empresas como Google e Microsoft.
+                cada vez mais aclamado por desenvolvedores e até mesmo por grandes empresas como Google e Microsoft.
             </p>
             <h2>Gratuito</h2>
             <p>
@@ -84,7 +84,7 @@
             <h1>Entendendo as desvantagens:</h1>
             <h2>Segurança</h2>
             <p>
-                Apesar de sua modularidade também ser um de seus pontos mais forte, isso pode levar a diversas vulnerabilidades de segurança,
+                Apesar de sua modularidade também ser um de seus pontos mais fortes, isso pode levar a diversas vulnerabilidades de segurança,
                 uma vez que permite os mais variados tipos de configurações.
             </p>
             <h2>Desempenho</h2>
