Arruma erros de digitaçao

--- a/projeto-dwe/pages/informacoes.html
+++ b/projeto-dwe/pages/informacoes.html
@@ -65,7 +65,7 @@
             <h2>Open Source</h2>
             <p>
                 O Servidor Apache se aproveita de uma das características mais importantes dos tempos atuais, o código aberto
-                cada vez mais aclamado por desenvolvedores e até mesmo por grandes empresas como Google e Microsoft.
+                é cada vez mais aclamado por desenvolvedores e até mesmo por grandes empresas como Google e Microsoft.
             </p>
             <h2>Gratuito</h2>
             <p>
